--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "my-awesome-greeter",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A nice greeter",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+     "test": "jest --config jestconfig.json",
+     "build": "tsc",
+     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+     "lint": "tslint -p tsconfig.json",
+     "prepare": "npm run build",
+     "prepublishOnly": "npm test && npm run lint",
+     "preversion": "npm run lint",
+     "version": "git add -A src",
+     "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yishaiz/greeter-npm-package.git"
   },
-  "keywords": [],
+  "keywords": ["Hello", "Greeter"],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -20,7 +27,10 @@
   },
   "homepage": "https://github.com/yishaiz/greeter-npm-package#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.5"
