--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "my-awesome-greeter",
-  "version": "1.0.0",
+  "name": "@npm-greeter/greeter",
+  "version": "1.0.5",
   "description": "A nice greeter",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-     "test": "jest --config jestconfig.json",
-     "build": "tsc",
-     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-     "lint": "tslint -p tsconfig.json",
-     "prepare": "npm run build",
-     "prepublishOnly": "npm test && npm run lint",
-     "preversion": "npm run lint",
-     "version": "git add -A src",
-     "postversion": "git push && git push --tags"
-  },
+    "test": "jest --config jestconfig.json",
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags"
+ },
+   "files": ["lib/**/*"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yishaiz/greeter-npm-package.git"
